Attempt to fix horizontal scrolling bug on mobile devices

--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -140,4 +140,8 @@
         margin-top: 35px;
         max-width: 100vw;
     }
+
+    body {
+        overflow-x: hidden;
+    }
 }
